fix footer align

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -12,5 +12,6 @@
 @media screen and (max-width:720px) {
   .footer {
     flex-direction: column;
+    align-items: flex-start;
   }
 }
